# rally-coach

./: .env.example  .gitignore  DEVELOPER.md  README.md  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
app/: config.py  database.py  main.py
app/models/: session.py  shot.py
app/routers/: sessions.py  shots.py  upload.py  video.py
app/static/: index.html  session.html
data/tennis_ball/: README.dataset.txt  README.roboflow.txt  data.yaml
desktop/: .gitignore  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
desktop/electron/: main.ts  preload.ts
desktop/scripts/: build-backend.sh
desktop/src/: App.tsx
pipeline/: runner.py
pipeline/models/: homography.py  kalman.py
pipeline/stages/: annotator.py  ball_tracker.py  bounce_detector.py  court_detector.py  frame_extractor.py  inout_classifier.py  net_clearance.py  pose_analyzer.py  shot_classifier.py  shot_quality.py  shot_segmenter.py  speed_estimator.py  spin_analyzer.py
pipeline/utils/: court_constants.py  geometry.py  video_io.py
scripts/: create_fixture.sh  train_ball_detector.py
tests/: conftest.py  test_annotator.py  test_ball_tracker.py  test_court_detector.py  test_e2e_pipeline.py  test_geometry.py  test_kalman.py  test_pose_analyzer.py  test_runner_court_detection.py  test_runner_progress.py
tests/features/: bounce_detection.feature  inout_classification.feature  quality_scoring.feature  sessions.feature  shot_segmentation.feature  shots.feature  speed_estimation.feature  upload.feature
tests/step_defs/: test_bounce_detection.py  test_quality_scoring.py  (+6 more)
(+28 files in other folders)
