[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rally-coach"
version = "0.1.0"
description = "Tennis ball tracking and shot analysis from video"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "ultralytics>=8.2.0",
    "lap>=0.5.12",
    "filterpy>=1.4.5",
    "mediapipe>=0.10.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
# Minimal set for CI tests — avoids installing heavy CV stack (ultralytics, mediapipe, opencv)
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "filterpy>=1.4.5",
    "opencv-python-headless>=4.9.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
bdd_features_base_dir = "tests/features"
markers = [
    "slow: marks tests as slow (run with -m slow or --run-slow)",
]
